# entelipy

./: README.md  pyproject.toml
src/entelipy/: __init__.py  __main__.py  app.py  cli.py
